@@ -1,4 +1,10 @@
 dependencies {
 	compile project(':sk-ws')
 	compile project(':sk-client-core')
+	testCompile project(':sk-ws').sourceSets.test.output
+}
+
+compileTestJava {
+	options.compilerArgs += ["--add-exports", "java.base/sun.security.x509=ALL-UNNAMED"]
+	options.compilerArgs += ["--add-exports", "java.base/sun.security.tools.keytool=ALL-UNNAMED"]
 }
